--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 				<ul>
 					<li id="signUp">
 						<a href="#">
-							<!-- <i class="fa fa-envelope-open" aria-hidden="true"></i> -->
+							<i class="fa fa-envelope-open" aria-hidden="true"></i>
 							 <!-- <span class="btn btn-blue1"></span> -->
 						</a>
 					</li>
