--- a/src/activity.html
+++ b/src/activity.html
@@ -6,6 +6,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ZeroGravity</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<script src="js/star.js"></script>
+	<style>
+		body,html {
+		  background: #060e1b;
+		  overflow: hidden;
+		  width: 100%;
+		  height: 100%;
+		}
+
+		canvas {
+		  opacity: 0.5;
+		  
+		}
+	</style>
 </head>
 
 <body>
@@ -35,6 +49,7 @@
 				</ul>
 			</div>
 		</div>
+		<canvas id="canvas"></canvas>
 		<!-- <footer>
 	Copyright@2017 by Zero Gravity
 </footer> -->
