--- a/src/activity.html
+++ b/src/activity.html
@@ -225,7 +225,7 @@
 						<div><p>最多收藏</p></div>
 					</div>	
 				</div>
-				<div class=".col-xs-12 a-phone-search">
+				<div class="col-xs-12 a-phone-search">
 				<div class="a-phone-searchContainer">
 					<i class="fa fa-search a-phone-icon" aria-hidden="true" ></i>
 						<input id="a-phone-input_1" type="text" name="" value="" placeholder="　　　搜尋日期、類型、地點">
@@ -280,14 +280,12 @@
 					</div>
 			</div>
 		</div>
-		<div class="a-phone-control">
-			<a href="#">
+		
+			<a class="a-phone-control" href="activity_phone_map.html">
 				<div class="a-phone-btn btn-lg btn-blue" id="a-phone-mapBtn">
 					地圖搜尋
 				</div>
-			</a>
-			
-		</div>		
+			</a>	
 		
 	</main>
 	
