--- a/src/activity_phone_map.html
+++ b/src/activity_phone_map.html
@@ -251,5 +251,4 @@
 <!-- 活動結束   -->
 </body>
 </html>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCoawYvLTgMObeyY-Ng0r4-f-vLhWoZZxQ&libraries=places&callback=initAutocomplete"
-         async defer></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtYAguCIykzC-F3lBBYbxLEbQAPqUhFvo&libraries=places&callback=initAutocomplete"></script>
