--- a/src/nav.html
+++ b/src/nav.html
@@ -21,7 +21,7 @@
 					<li><a href="#"><span>A</span>ctivity</a></li>
 					<li><a href="#"><span>F</span>ourm</a></li>
 					<li><a href="#"><span>P</span>hoto</a></li>
-					<li><a href="#"><span>K</span>nowledge</a></li>
+					<li><a href="#"><span>N</span>ews</a></li>
 				</ul>
 				<ul class="mainMenu signArea">
 					<li id="signLeft">
@@ -35,6 +35,7 @@
 				</ul>
 			</div>
 		</div>
+	</nav>
 		<!-- <footer>
 	Copyright@2017 by Zero Gravity
 </footer> -->
