--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +8,6 @@
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="js/skrollr.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel='stylesheet prefetch' href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/86044/bisk8s_cdpn_base_201312_1.css'>
     <script src="js/index.js"></script>
     <title>ZeroGravity</title>
@@ -233,7 +231,7 @@
                 <img src="img/i-know03.png">
             </div>
         </section>
-        <section class="section section04">
+        <!-- <section class="section section04">
           <div class="gallery">
             <img src="img/i-act01.jpg">
             <img src="img/i-act02.jpg">
@@ -259,7 +257,7 @@
             <img src="img/i-know04.png">
             <img src="img/i-know04.png">
           </div>
-        </section>
+        </section> -->
         <section class="section section05">
             <ul class="accordion" id="accordion">
                 <li class="know know1 fakeCover">
@@ -591,47 +589,3 @@ function stop(){
         _knowTransTimes ++;
     }
 </script> -->
-=======
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ZeroGravity</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-
-<body>
-	<nav id="nav">
-		<div class="container relative">
-			<div class="row">
-				<input type="checkbox" id="navButtonHidden">
-				<label id="navButton" for="navButtonHidden"></label>
-				<div id="logo">
-					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
-				</div>
-				<ul class="mainMenu menu">
-					<li><a href="activity.html"><span>A</span>ctivity</a></li>
-					<li><a href="#"><span>F</span>ourm</a></li>
-					<li><a href="#"><span>P</span>hoto</a></li>
-					<li><a href="#"><span>K</span>nowledge</a></li>
-				</ul>
-				<ul class="mainMenu signArea">
-					<li id="signLeft">
-						<!-- <i class="fa fa-envelope-open" aria-hidden="true"></i> -->
-						<span class="btn btn-blue"><a href="#">註冊</a></span>
-					</li>
-					<li id="signRight">
-						<!-- <a href="#"><img src="img/memberPhoto.png"></a> -->
-						<span class="btn btn-blue"><a href="#">登入</a></span>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-		<!-- <footer>
-	Copyright@2017 by Zero Gravity
-</footer> -->
-</body>
-
-</html>
->>>>>>> 4d8be554131d4d974ee004932952361ee0b2dca3
