--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,11 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="js/skrollr.min.js"></script>
-    <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<script src="js/modernizr-custom.js"></script>
     <link rel='stylesheet prefetch' href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/86044/bisk8s_cdpn_base_201312_1.css'>
     <script src="js/index.js"></script>
     <title>ZeroGravity</title>
 </head>
-
 <body>
     <canvas id="icanvas" width="80" height="360"></canvas>
     <div class="sideBarGroup">
@@ -24,16 +22,14 @@
         <div class="sideBar sideBar5" id="sideBar5"><span>Article</span></div>
     </div>
     <div id="info">0</div>
-    <!-- <div id="i-wrapper" data-0="transform:translate(0%,-4841px)" data-1160="transform:translate(0%,-3554px)" data-4060="transform:translate(0%,-3554px)" data-1000p="transform:translate(0%,0%)"> -->
-    <div id="i-wrapper" data-0="transform:translate(0%,-4841px)" data-1160="transform:translate(0%,-3554px)" data-4060="transform:translate(0%,-3554px)"
+    <div id="i-wrapper" data-0="transform:translate(0%,-4841px)" data-1160="transform:translate(0%,-3554px)" data-4060="transform:translate(0%,-3554px)" data-1000p="transform:translate(0%,0%)">
+    <!-- <div id="i-wrapper" data-0="transform:translate(0%,-4841px)" data-1160="transform:translate(0%,-3554px)" data-4060="transform:translate(0%,-3554px)"
     data-800p="transform:translate(0%,-2220px)"
     data-850p="transform:translate(0%,-2220px)"
-    data-890p="transform:translate(0%,-2000px)">
-        <div id="i-bgc">
-            <!-- <img src="img/i-bgc.png"> -->
-        </div>
+    data-890p="transform:translate(0%,-2000px)"> -->
+        <div id="i-bgc"></div>
         <section class="section section01">
-            <h1>和我們一起&nbsp&nbsp&nbsp探索星際去</h1>
+            <h1>和我們一起探索星際去</h1>
             <div class="scroller"><i class="fa fa-angle-double-down" aria-hidden="true"></i></div>
             <p>scroll down</p>
             <img id="i-ground" src="img/i-ground.png">
@@ -44,8 +40,8 @@
             <img id="cloud1" src="img/i-cloud.png" data-0="right:-300px;opacity:1" data-810="right:-1000px;opacity:1" data-2310="right:-1000px;opacity:0">
             <img id="cloud2" src="img/i-cloud.png" data-0="left:-900px;opacity:1" data-810="left:-1100px;opacity:1" data-2310="left:-1100px;opacity:0">
             <div class="activity">
-                <!-- <div class="act act01" data-1000="transform:scale(0) translate3d(-330px,-730px,-350px);opacity:0;" data-1160="transform:scale(1) translate3d(0,0px,0);opacity:1;" data-1560="transform:scale(1.2) translate3d(200px,330px,0);opacity:1" data-1660="transform:scale(1.4) translate3d(300px,530px,0);opacity:0"> -->
-                    <div class="act act01" data-1000="transform:scale(0) translate3d(-330px,-730px,-350px);opacity:0;" data-1160="transform:scale(0.4) translate3d(0,0px,0);opacity:1;" data-1560="transform:scale(0.6) translate3d(200px,0px,0);opacity:1" data-1660="transform:scale(0.8) translate3d(300px,330px,0);opacity:0">
+                <div class="act act01" data-1000="transform:scale(0) translate3d(-330px,-730px,-350px);opacity:0;" data-1160="transform:scale(1) translate3d(0,0px,0);opacity:1;" data-1560="transform:scale(1.2) translate3d(200px,330px,0);opacity:1" data-1660="transform:scale(1.4) translate3d(300px,530px,0);opacity:0">
+                    <!-- <div class="act act01" data-1000="transform:scale(0) translate3d(-330px,-730px,-350px);opacity:0;" data-1160="transform:scale(0.4) translate3d(0,0px,0);opacity:1;" data-1560="transform:scale(0.6) translate3d(200px,0px,0);opacity:1" data-1660="transform:scale(0.8) translate3d(300px,330px,0);opacity:0"> -->
                     <div class="pic">
                         <img src="img/i-act01.jpg">
                     </div>
@@ -55,8 +51,8 @@
                         <p>3天2夜觀星露營，有機會看到南十字星唷！</p>
                     </div>
                 </div>
-                <!-- <div class="act act02" data-1600="transform:scale(0) translate3d(830px,-330px,-250px);opacity:0;" data-1760="transform:scale(1) translate3d(0,0px,0);opacity:1;" data-2160="transform:scale(1.4) translate3d(0px,330px,0);opacity:1" data-2260="transform:scale(2) translate3d(-300px,-430px,0);opacity:0"> -->
-                    <div class="act act02" data-1600="transform:scale(0) translate3d(830px,-330px,-250px);opacity:0;" data-1760="transform:scale(0.4) translate3d(0,0px,0);opacity:1;" data-2160="transform:scale(0.6) translate3d(0px,0px,0);opacity:1" data-2260="transform:scale(0.8) translate3d(-300px,-430px,0);opacity:0">
+                <div class="act act02" id="i-act02" data-1600="transform:scale(0) translate3d(830px,-330px,-250px);opacity:0;" data-1760="transform:scale(1) translate3d(0,0px,0);opacity:1;" data-2160="transform:scale(1.4) translate3d(0px,330px,0);opacity:1" data-2260="transform:scale(2) translate3d(-300px,-430px,0);opacity:0">
+                    <!-- <div class="act act02" data-1600="transform:scale(0) translate3d(830px,-330px,-250px);opacity:0;" data-1760="transform:scale(0.4) translate3d(0,0px,0);opacity:1;" data-2160="transform:scale(0.6) translate3d(0px,0px,0);opacity:1" data-2260="transform:scale(0.8) translate3d(-300px,-430px,0);opacity:0"> -->
                     <div class="pic">
                         <img src="img/i-act02.jpg">
                     </div>
@@ -476,13 +472,6 @@ function loop(){
   })
 }
 loop();
-//
-var gui = new dat.GUI();
-gui.add(window,'loop');
-gui.add(window,'stop');
-function stop(){
-  $(body).stop();
-}
       // $(function() {
       //
       //     $('.section04').mousemove(function(e) {
