--- a/src/nav.html
+++ b/src/nav.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
-<body>
+<body style="background-color:steelblue">
 	<nav id="nav">
 		<div class="container relative">
 			<div class="row">
@@ -18,28 +18,23 @@
 					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
 				</div>
 				<ul class="mainMenu menu">
-					<li><a href="#"><span>A</span>ctivity</a></li>
-					<li><a href="#"><span>F</span>ourm</a></li>
-					<li><a href="#"><span>P</span>hoto</a></li>
-					<li><a href="#"><span>N</span>ews</a></li>
+					<li><a href="#">觀星活動</a></li>
+					<li><a href="#">星際論壇</a></li>
+					<li><a href="#">照&nbsp&nbsp片&nbsp&nbsp牆</a></li>
+					<li><a href="#">星&nbsp&nbsp知&nbsp&nbsp識</a></li>
 				</ul>
 				<ul class="mainMenu signArea">
 					<li id="signLeft">
-						<!-- <i class="fa fa-envelope-open" aria-hidden="true"></i> -->
-						<span class="btn btn-blue"><a href="#">註冊</a></span>
+						<i class="fa fa-user-circle-o" aria-hidden="true"></i>
+						<span><a href="#">註冊</a></span>
 					</li>
 					<li id="signRight">
-						<!-- <a href="#"><img src="img/memberPhoto.png"></a> -->
-						<span class="btn btn-blue"><a href="#">登入</a></span>
+						<span><a href="#">登入</a></span>
 					</li>
 				</ul>
 			</div>
 		</div>
-<<<<<<< HEAD
 	</nav>
-=======
-		</nav>
->>>>>>> 4d8be554131d4d974ee004932952361ee0b2dca3
 		<!-- <footer>
 	Copyright@2017 by Zero Gravity
 </footer> -->
