--- a/src/test.html
+++ b/src/test.html
@@ -10,7 +10,7 @@
 		html {
 		  width: 100%;
 		  height: 100%;
-		  
+
 		  background: #11e8bb; /* Old browsers */
 		  background: -moz-radial-gradient(ellipse at center, #1f4c74 0%, rgb(29, 34, 60) 30%, #090a0f 50%); /* FF3.6-15 */
 		  background: -webkit-radial-gradient(ellipse at center, #1f4c74 0%, rgb(29, 34, 60) 30%, #090a0f 50%); /* Chrome10-25,Safari5.1-6 */
@@ -18,15 +18,15 @@
 		  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#11e8bb', endColorstr='#8200c9',GradientType=0 ); /* IE6-9 */
 		}
 
-	
+
 
 	</style>
 
 </head>
 <body>
-		<!-- particles.js container --> 
+		<!-- particles.js container -->
 	<div id="canvas"></div>
-	
+
 </body>
 </html>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.js"></script>
@@ -49,7 +49,7 @@ function init() {
   scene = new THREE.Scene();
 
   camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
-  camera.position.z = 400;
+  camera.position.z = 300;
   scene.add(camera);
 
   circle = new THREE.Object3D();
@@ -62,7 +62,7 @@ function init() {
 
 
 //three.js的幾何圖形
-  var geometry = new THREE.TetrahedronGeometry(2, 0);
+  var geometry = new THREE.SphereGeometry(1, 20, 10);
   var geom = new THREE.IcosahedronGeometry(7, 1); //正20邊型
   var geom2 = new THREE.IcosahedronGeometry(15, 1);
 
@@ -101,7 +101,7 @@ function init() {
 
   var ambientLight = new THREE.AmbientLight(0x999999 );
   scene.add(ambientLight);
-  
+
   var lights = [];
 lights[0] = new THREE.DirectionalLight( 0xffffff, 1 );
 lights[0].position.set( 1, 0, 0 );
@@ -112,7 +112,7 @@ lights[2].position.set( -0.75, -1, 0.5 );
 scene.add( lights[0] );
 scene.add( lights[1] );
 scene.add( lights[2] );
-  
+
 
   window.addEventListener('resize', onWindowResize, false);
 
@@ -140,8 +140,3 @@ function animate() {
 
 
 </script>
-
-
-
-
-
