--- a/src/test.html
+++ b/src/test.html
@@ -7,7 +7,7 @@
 	<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
 	<style type="text/css">
-		html {
+		#f_bg1 {
 		  width: 100%;
 		  height: 100%;
 		  
@@ -23,8 +23,8 @@
 	</style>
 
 </head>
-<body>
-		<!-- particles.js container --> 
+<body id="f_bg1">
+	
 	<div id="canvas"></div>
 	
 </body>
@@ -62,7 +62,7 @@ function init() {
 
 
 //three.js的幾何圖形
-  var geometry = new THREE.TetrahedronGeometry(2, 0);
+  var geometry = new THREE.SphereGeometry(1, 20, 10);
   var geom = new THREE.IcosahedronGeometry(7, 1); //正20邊型
   var geom2 = new THREE.IcosahedronGeometry(15, 1);
 
