--- a/src/activity.html
+++ b/src/activity.html
@@ -348,7 +348,9 @@ $(function(){
 						<div class="a-btn">
 							<div class="btn-lg btn-blue"><a href="activity_recommend.html">推薦活動</a></div>
 
-							<div class="btn-lg btn-blue" id="inline-popups"><a href="#test-popup" data-effect="mfp-3d-unfold">新增活動</a></div><div class="a-down">
+							<div class="btn-lg btn-blue">
+									<a href="activity_addACT.html">新增活動</a>
+							</div><div class="a-down">
 								<i class="fa fa-angle-double-down" aria-hidden="true"></i>
 							</div>
 						</div>
