--- a/src/activity.html
+++ b/src/activity.html
@@ -322,37 +322,36 @@ $(function(){
 			
 
 		</canvas> -->
-<div id="fullpage">
-	<div class="section" id="section0">
-	<header id="header" class="">
-        <nav id="nav">
+<nav id="nav">
 		<div class="container relative">
 			<div class="row">
 				<input type="checkbox" id="navButtonHidden">
 				<label id="navButton" for="navButtonHidden"></label>
 				<div id="logo">
-					<a href="index.html"><img src="img/logo.png" alt="ZeroGravity"></a>
+					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
 				</div>
 				<ul class="mainMenu menu">
-					<li><a href="activity.html"><span>A</span>ctivity</a></li>
-					<li><a href="forum.html"><span>F</span>ourm</a></li>
-					<li><a href="photo.html"><span>P</span>hoto</a></li>
-					<li><a href="knolege.html"><span>K</span>nowledge</a></li>
+					<li><a href="activity.html">觀星活動</a></li>
+					<li><a href="#">星際論壇</a></li>
+					<li><a href="#">照&nbsp&nbsp片&nbsp&nbsp牆</a></li>
+					<li><a href="#">星&nbsp&nbsp知&nbsp&nbsp識</a></li>
 				</ul>
 				<ul class="mainMenu signArea">
 					<li id="signLeft">
-						<!-- <i class="fa fa-envelope-open" aria-hidden="true"></i> -->
-						<span class="btn btn-blue"><a href="#">註冊</a></span>
+						<i class="fa fa-user-circle-o" aria-hidden="true"></i>
+						<span><a href="#">註冊</a></span>
 					</li>
 					<li id="signRight">
-						<!-- <a href="#"><img src="img/memberPhoto.png"></a> -->
-						<span class="btn btn-blue"><a href="#">登入</a></span>
+						<span><a href="#">登入</a></span>
 					</li>
 				</ul>
 			</div>
 		</div>
-		<div class="clear"></div>
-		</nav>
+	</nav>
+<div id="fullpage">
+	<div class="section" id="section0">
+	<header id="header" class="">
+        
 		<div class="col-xs-12  col-sm-12 col-md-12  a-banner">
 		<div class="container ">
 			<div class="row">
