--- a/src/activity_addACT.html
+++ b/src/activity_addACT.html
@@ -156,7 +156,7 @@
 							
 						</div>
 						<div class="row">
-							<div class="col-xs-12 col-sm-6 col-md-12">
+							<div class="col-xs-12 col-sm-6 col-md-12 a-add-google">
 							
 							<div class="googleMap">
 								<div id="co">
