--- a/src/activity_recommend.html
+++ b/src/activity_recommend.html
@@ -138,7 +138,7 @@ body{
                 <div id="a-slide-2" class="a-slide" data-0="transform:translate(0%,-100%)"  data-150p="transform:translate(0%,0%)"  data-250p="transform:translate(-100%,100%)">
                     <div class="container">
                         <div class="row">
-                            <div class="col-xs-12 col-sm-12">
+                            <div class="col-xs-12 col-sm-12 col-md-12">
                             <svg class="a-r-star" width="330" height="500" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
                                  <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
                                  <g>
