--- a/src/member.html
+++ b/src/member.html
@@ -91,8 +91,8 @@
 			<p>From Mars</p>
 		</div>
 	</div>
-	<!-- <canvas id="canvas" width="1300" height="592" style="background-color: transparent;"> -->
-	</canvas>
+	<!-- <canvas id="canvas" width="1300" height="592" style="background-color: transparent;"> 
+	</canvas>-->
 	
 	<div class="m_infos">
 		<div class="m_infos_left">
