--- a/src/nav.html
+++ b/src/nav.html
@@ -10,7 +10,7 @@
 
 <body style="background-color:steelblue">
 	<nav id="nav">
-		<div class="container relative">
+		<div class="relative">
 			<div class="row">
 				<input type="checkbox" id="navButtonHidden">
 				<label id="navButton" for="navButtonHidden"></label>
