--- a/src/activity.html
+++ b/src/activity.html
@@ -328,9 +328,9 @@ $(function(){
 				</div>
 				<ul class="mainMenu menu">
 					<li><a href="activity.html">觀星活動</a></li>
-					<li><a href="#">星際論壇</a></li>
-					<li><a href="#">照&nbsp&nbsp片&nbsp&nbsp牆</a></li>
-					<li><a href="#">星&nbsp&nbsp知&nbsp&nbsp識</a></li>
+					<li><a href="forum.html">星際論壇</a></li>
+					<li><a href="photo.html">照片牆</a></li>
+					<li><a href="article.html">星知識</a></li>
 				</ul>
 				<ul class="mainMenu signArea">
 					<li id="signLeft">
@@ -464,7 +464,7 @@ $(function(){
 												地圖搜尋
 											</div>
 										</a>
-										<div class="row scrollable-element" id="a-popups">
+										<div class="row scrollable-element" id="">
 											<div class="col-xs-12 col-sm-12 col-md-12">
 												<div class="a-tab">
 													<div><p>最近時間</p></div>
@@ -489,7 +489,7 @@ $(function(){
 											<div class="col-xs-12 col-sm-12 col-md-12 a-pReset">
 												<div class="col-xs-12 col-sm-6 col-md-6 ">
 
-													<a href="#a-popup-act" data-effect="mfp-3d-unfold">
+													<a href="activity_one.activity.html" data-effect="mfp-3d-unfold">
 													<div class="a-item a-phone-searchContainer">
 														<img src="img/a_007.jpg" alt="" class="rwd-img">
 															<p class="a-text-title">墾丁南十字觀星露營</p>
@@ -501,7 +501,7 @@ $(function(){
 
 											<div class="col-xs-12 col-sm-6 col-md-6 ">
 
-												<a href="#a-popup-act"  data-effect="mfp-3d-unfold">
+												<a href="activity_one.activity.html"  data-effect="mfp-3d-unfold">
 													<div class="a-item a-phone-searchContainer">
 														<img src="img/a_006.jpg" alt="" class="rwd-img">
 															<p class="a-text-title">墾丁南十字觀星露營</p>
@@ -515,7 +515,7 @@ $(function(){
 
 											<div class="col-xs-12 col-sm-6 col-md-6 ">
 
-												<a href="#a-popup-act"  data-effect="mfp-3d-unfold">
+												<a href="activity_one.activity.html"  data-effect="mfp-3d-unfold">
 													<div class="a-item a-phone-searchContainer">
 														<img src="img/a_001.jpg" alt="" class="rwd-img">
 															<p class="a-text-title">墾丁南十字觀星露營</p>
@@ -527,7 +527,7 @@ $(function(){
 
 										<div class="col-xs-12 col-sm-6 col-md-6 ">
 
-												<a href="#a-popup-act"  data-effect="mfp-3d-unfold">
+												<a href="activity_one.activity.html"  data-effect="mfp-3d-unfold">
 													<div class="a-item a-phone-searchContainer">
 														<img src="img/a_002.jpg" alt="" class="rwd-img">
 															<p class="a-text-title">墾丁南十字觀星露營</p>
