--- a/src/activity_recommend.html
+++ b/src/activity_recommend.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>activity_recommend</title>
+    <title>Zero Gravity</title>
    
     <!-- <link rel="stylesheet" type="text/css" href="css/skrollr_1.css"> -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
