--- a/src/forum-post.html
+++ b/src/forum-post.html
@@ -42,6 +42,7 @@
 
 	*{
 		/*outline: 1px solid red;*/
+		/*font-family: 微軟正黑體!important;*/
 	}
 		.f_bg_wrapper{
 			position: fixed;
@@ -78,8 +79,8 @@
 				<ul class="mainMenu menu">
 					<li><a href="#">觀星活動</a></li>
 					<li><a href="#">星際論壇</a></li>
-					<li><a href="#">照&nbsp&nbsp片&nbsp&nbsp牆</a></li>
-					<li><a href="#">星&nbsp&nbsp知&nbsp&nbsp識</a></li>
+					<li><a href="#">照片牆</a></li>
+					<li><a href="#">星知識</a></li>
 				</ul>
 				<ul class="mainMenu signArea">
 					<li id="signLeft">
@@ -157,12 +158,14 @@
 										<img src="img/forum/f_005.png" width="80" height="80">
 										<div class="f_user_info">
 											<span>Allie213</span><span class="user_level">星際過客</span>
-											<p>2017-01-01 12:00</p>
+											<p>2017-01-01 12:00發表</p>
 										</div>
 									</div>
-									<p>《星艦奇航記》（Star Trek）50年 _日期就訂在50年前首播的9月，但票價和出席名單等細節都還未定。 這場影迷大會將舉辦在紐約曼哈頓的Javits會議中心，這也是New York Comic Con.的舉辦地點。</p>
-									<p>2016年是 Star Trek電視影集50周年紀念</p>
-									<p>Star Trek已經要50周年了，這禮拜的電影──《星際爭霸戰：浩瀚無垠》（Star Trek: Beyond）更是紀念這項盛舉的作品。</p>
+									<div class="f_post_text">
+										<p>《星艦奇航記》（Star Trek）50年 _日期就訂在50年前首播的9月，但票價和出席名單等細節都還未定。 這場影迷大會將舉辦在紐約曼哈頓的Javits會議中心，這也是New York Comic Con.的舉辦地點。</p>
+										<p>2016年是 Star Trek電視影集50周年紀念</p>
+										<p>Star Trek已經要50周年了，這禮拜的電影──《星際爭霸戰：浩瀚無垠》（Star Trek: Beyond）更是紀念這項盛舉的作品。</p>
+									</div>
 								<!-- 回覆&檢舉 -->
 									<div class="f_btn">
 										<button>檢舉</button>
@@ -180,13 +183,14 @@
 										<img src="img/forum/f_004.png" width="80" height="80">
 										<div class="f_user_info">
 											<span>Katie918</span><span class="user_level">星際新手</span>
-											<p>2017-01-01 18:00</p>
+											<p>2017-01-01 18:00發表</p>
 										</div>
 									</div>
-									
-									<p>最近mod有上架一系列的電影</p>
-									<p>看到睡著(揍扁)</p>
-									<p>啊~ID4加減看就好惹</p>
+									<div class="f_post_text">
+										<p>最近mod有上架一系列的電影</p>
+										<p>看到睡著(揍扁)</p>
+										<p>啊~ID4加減看就好惹</p>
+									</div>
 								<!-- 回覆&檢舉 -->
 									<div class="f_btn">
 										<button>檢舉</button>
@@ -201,10 +205,12 @@
 										<img src="img/forum/f_005.png" width="80" height="80">
 										<div class="f_user_info">
 											<span>Allie213</span><span class="user_level">星際過客</span>
-											<p>2017-01-01 19:00</p>
+											<p>2017-01-01 19:00發表</p>
 										</div>
 									</div>
-									<p>裡面也有航海家號，不過看那樣子應該是依照最後一季最後一集裝了燒蝕船體裝甲的外型做的~~</p>
+									<div class="f_post_text">
+										<p>裡面也有航海家號，不過看那樣子應該是依照最後一季最後一集裝了燒蝕船體裝甲的外型做的~~</p>
+									</div>
 								<!-- 回覆&檢舉 -->
 									<div class="f_btn">
 										<button>檢舉</button>
