--- a/src/member.html
+++ b/src/member.html
@@ -46,6 +46,56 @@
 
 		} 
 
+		nav{
+			height: 80px;
+		    width: 100%;
+		    background: linear-gradient(to right, #0c3458 0%, rgba(29, 34, 60,.8) 40%, rgba(21, 22, 31, 0.7) 80%);
+		    box-shadow: 1px 1px 30px #000;
+		    position: fixed;
+		    top: 0;
+		    left: 0;
+		    z-index: 10000;
+		}
+		.mainMenu{
+			padding-top: 13px;
+		}
+
+		.mainMenu.menu a {
+		    display: block;
+		    color: #f3f7f7;
+		    font-size: 20px;
+		    /*padding: 0px 20px 7px;*/
+		    letter-spacing: 1px;
+		    position: relative;
+
+		}
+
+		.mainMenu.menu a:hover{
+			border: 0px;
+			color: #86d4f5;
+		}
+
+		.mainMenu.menu a:before{
+			content: '';
+		    width: 0%;
+		    height: 0px;
+		    border: 0px solid #86d4f5;
+		    /*#daaf73*/
+		    position: absolute;
+		    top: 80%;
+		    left: 0;
+		    bottom: 0;
+		    right: 0;
+		    margin: auto;
+		    /*box-shadow: 1px 1px 1px #333;*/
+		}
+
+		.mainMenu.menu a:hover:before{
+			width: 80%;
+			border: 1px solid #86d4f5;
+			transition: 1s;
+		}
+
 	</style>
 </head>
 <body id="m_body">
@@ -59,10 +109,10 @@
 					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
 				</div>
 				<ul class="mainMenu menu">
-					<li><a href="#">觀星活動</a></li>
-					<li><a href="#">星際論壇</a></li>
-					<li><a href="#">照&nbsp&nbsp片&nbsp&nbsp牆</a></li>
-					<li><a href="#">星&nbsp&nbsp知&nbsp&nbsp識</a></li>
+					<li><a href="activity.html">觀星活動</a></li>
+					<li><a href="forum.html">星際論壇</a></li>
+					<li><a href="photo.html">照片牆</a></li>
+					<li><a href="article.html">星知識</a></li>
 				</ul>
 				<ul class="mainMenu signArea">
 					<li id="signLeft">
@@ -336,7 +386,7 @@
 
 <script type="text/javascript">
 	
-	particlesJS("particles-js", {"particles":{"number":{"value":50,"density":{"enable":true,"value_area":500}},"color":{"value":"#ffffff"},"shape":{"type":"circle","stroke":{"width":0,"color":"rgb(78, 104, 162)"},"polygon":{"nb_sides":5},"image":{"src":"","width":100,"height":100}},"opacity":{"value":1,"random":true,"anim":{"enable":false,"speed":1,"opacity_min":0.5,"sync":false}},"size":{"value":4,"random":true,"anim":{"enable":false,"speed":104.7579603868735,"size_min":0.1,"sync":false}},"line_linked":{"enable":true,"distance":100,"color":"#ffffff","opacity":0.6,"width":1},"move":{"enable":true,"speed":1,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":1200}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":false,"mode":"grab"},"onclick":{"enable":false,"mode":"push"},"resize":true},"modes":{"grab":{"distance":500,"line_linked":{"opacity":1}},"bubble":{"distance":400,"size":40,"duration":2,"opacity":8,"speed":8},"repulse":{"distance":200,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});
+	particlesJS("particles-js", {"particles":{"number":{"value":50,"density":{"enable":true,"value_area":500}},"color":{"value":"#ffffff"},"shape":{"type":"circle","stroke":{"width":0,"color":"rgb(78, 104, 162)"},"polygon":{"nb_sides":5},"image":{"src":"","width":100,"height":100}},"opacity":{"value":1,"random":true,"anim":{"enable":false,"speed":1,"opacity_min":0.8,"sync":false}},"size":{"value":4,"random":true,"anim":{"enable":false,"speed":104.7579603868735,"size_min":0.1,"sync":false}},"line_linked":{"enable":true,"distance":120,"color":"#ffffff","opacity":0.8,"width":1},"move":{"enable":true,"speed":1,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":1200}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":false,"mode":"grab"},"onclick":{"enable":false,"mode":"push"},"resize":true},"modes":{"grab":{"distance":500,"line_linked":{"opacity":1}},"bubble":{"distance":400,"size":40,"duration":2,"opacity":8,"speed":8},"repulse":{"distance":200,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});
 
 
 	   var count_particles, stats, update; stats = new Stats; stats.setMode(0); stats.domElement.style.position = 'absolute'; stats.domElement.style.left = '0px'; stats.domElement.style.top = '0px'; document.body.appendChild(stats.domElement); count_particles = document.querySelector('.js-count-particles'); update = function() { stats.begin(); stats.end(); if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) { count_particles.innerText = window.pJSDom[0].pJS.particles.array.length; } requestAnimationFrame(update); }; requestAnimationFrame(update);
