--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 
 <body id="i-body">
   <nav id="nav">
-		<div class="container relative">
+		<div class="relative">
 			<div class="row">
 				<!-- <input type="checkbox" id="navButtonHidden"> -->
 				<div id="navButton"><i class="fa fa-bars"></i></div>
@@ -36,10 +36,10 @@
 					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
 				</div>
 				<ul class="mainMenu menu">
-					<li><a href="#">觀星活動</a></li>
-					<li><a href="#">星際論壇</a></li>
-					<li><a href="#">照&nbsp&nbsp片&nbsp&nbsp牆</a></li>
-					<li><a href="#">星&nbsp&nbsp知&nbsp&nbsp識</a></li>
+					<li><a href="activity.html">觀星活動</a></li>
+					<li><a href="forum.html">星際論壇</a></li>
+					<li><a href="photo.html">照片牆</a></li>
+					<li><a href="article.html">星知識</a></li>
 				</ul>
 				<ul class="mainMenu signArea">
 					<li id="signLeft">
@@ -65,6 +65,7 @@
     <div id="i-wrapper" data-0="transform:translate(0%,-200vh)" data-100p="transform:translate(0%,-100vh)" data-600p="transform:translate(0%,-100vh)" data-700p="transform:translate(0,0)">
         <section class="section section01" data-0p="transform:scale(1)" data-20p="transform:scale(1)">
             <div class="title">
+                <h2>ZeroGravity</h2>
                 <h1>和我們一起探索星際去</h1>
                 <div class="i-searchBar">
                     <div class="searchBar">
@@ -74,16 +75,18 @@
                     <div class="searchDetail">
                         <i class="fa fa-times" aria-hidden="true"></i>
                         <div class="date">
-                            <input type="text" id="i-date-control" placeholder="日期" />
+                            <input type="text" id="i-date-control" placeholder="日期" /><i class="fa fa-calendar" aria-hidden="true"></i>
                             <div id="multiple">
                                 <div class="calendar-dark"></div>
                             </div>
                         </div>
                         <div class="loc">
                             <input id="locInput" type="text" placeholder="地點">
+                            <i class="fa fa-map-marker" aria-hidden="true"></i>
                         </div>
                         <div class="type">
                             <input id="typeInput" type="text" placeholder="類型">
+                            <i class="fa fa-wpexplorer" aria-hidden="true"></i>
                             <ul>
                                 <li>親子觀星</li>
                                 <li>親子觀星</li>
