--- a/src/nav.html
+++ b/src/nav.html
@@ -18,10 +18,10 @@
 					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
 				</div>
 				<ul class="mainMenu menu">
-					<li><a href="#">觀星活動</a></li>
+					<li><a class="onThisPage" href="#">觀星活動</a></li>
 					<li><a href="#">星際論壇</a></li>
-					<li><a href="#">照&nbsp&nbsp片&nbsp&nbsp牆</a></li>
-					<li><a href="#">星&nbsp&nbsp知&nbsp&nbsp識</a></li>
+					<li><a href="#">照片牆</a></li>
+					<li><a href="#">星知識</a></li>
 				</ul>
 				<ul class="mainMenu signArea">
 					<li id="signLeft">
