--- a/src/activity_addACT.html
+++ b/src/activity_addACT.html
@@ -40,6 +40,7 @@
 	<link rel="stylesheet" type="text/css" href="css/jquery.timepicker.css">
 	<script type="text/javascript" src="js/jquery.timepicker.js"></script>
 	<script type="text/javascript" src="js/a-slider.js"></script>
+	<script type="text/javascript" src="js/nav.js"></script>
 <style type="text/css" media="screen">
 
 #a-body {
@@ -82,7 +83,7 @@
 
 <body id="a-body">
 <nav id="nav">
-		<div class="container relative">
+		<div class="relative">
 			<div class="row">
 				<input type="checkbox" id="navButtonHidden">
 				<label id="navButton" for="navButtonHidden"></label>
@@ -90,7 +91,7 @@
 					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
 				</div>
 				<ul class="mainMenu menu">
-					<li><a href="activity.html">觀星活動</a></li>
+					<li><a href="activity.html" class="onThisPage">觀星活動</a></li>
 					<li><a href="forum.html">星際論壇</a></li>
 					<li><a href="photo.html">照片牆</a></li>
 					<li><a href="article.html">星知識</a></li>
