--- a/src/activity.html
+++ b/src/activity.html
@@ -51,7 +51,7 @@
 	<script type="text/javascript" src="libs/pg-calendar/vender/moment.min.js"></script>
 	<script src="libs/pg-calendar/src/js/pignose.calendar.js"></script>
 	<script src="js/jquery.mobile.custom.min.js"></script>
-
+	<script type="text/javascript" src="js/nav.js"></script>
 	<script type="text/javascript">
         $(document).ready(function() {
             
@@ -319,7 +319,7 @@ $(function(){
 
 		</canvas> -->
 <nav id="nav">
-		<div class="container relative">
+		<div class="relative">
 			<div class="row">
 				<input type="checkbox" id="navButtonHidden">
 				<label id="navButton" for="navButtonHidden"></label>
@@ -327,7 +327,7 @@ $(function(){
 					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
 				</div>
 				<ul class="mainMenu menu">
-					<li><a href="activity.html">觀星活動</a></li>
+					<li><a href="activity.html" class="onThisPage">觀星活動</a></li>
 					<li><a href="forum.html">星際論壇</a></li>
 					<li><a href="photo.html">照片牆</a></li>
 					<li><a href="article.html">星知識</a></li>
