--- a/src/forum.html
+++ b/src/forum.html
@@ -134,7 +134,7 @@
 		  position: absolute;
 		  top: 0;
 		  left: 0;
-		  background: radial-gradient(ellipse at center, rgba(31, 76, 116, 1) 0%, rgba(21, 28, 60, 1) 30%, rgba(9, 10, 15, 0.9) 60%, rgba(0,0,0,1) 80%);
+		  background: radial-gradient(ellipse at center, rgba(31, 76, 116, .5) 0%, rgba(21, 28, 60, 1) 30%, rgba(9, 10, 15, 0.9) 60%, rgba(0,0,0,.5) 80%);
 
 		  /*.6 .9 .9*/
 
@@ -148,7 +148,7 @@
 <body id="f_wrapper">
 	<!-- 導覽列 -->
 	<nav id="nav" style="background-color: rgba(0,0,0,0.8);">
-		<div class="container relative">
+		<div class="relative">
 			<div class="row">
 				<input type="checkbox" id="navButtonHidden">
 				<label id="navButton" for="navButtonHidden"></label>
@@ -157,7 +157,7 @@
 				</div>
 				<ul class="mainMenu menu">
 					<li><a href="activity.html">觀星活動</a></li>
-					<li><a href="forum.html">星際論壇</a></li>
+					<li><a href="forum.html"  class="onThisPage">星際論壇</a></li>
 					<li><a href="photo.html">照片牆</a></li>
 					<li><a href="article.html">星知識</a></li>
 				</ul>
