--- a/src/member.html
+++ b/src/member.html
@@ -101,7 +101,7 @@
 <body id="m_body">
 <!-- 導覽列 -->
 <nav id="nav">
-		<div class="container relative">
+		<div class="relative">
 			<div class="row">
 				<input type="checkbox" id="navButtonHidden">
 				<label id="navButton" for="navButtonHidden"></label>
