--- a/src/activity_one.html
+++ b/src/activity_one.html
@@ -70,7 +70,7 @@
 <body id="a_1activity_wrapper">
 <!-- 導覽列 -->
 <nav id="nav">
-		<div class="container relative">
+		<div class="relative">
 			<div class="row">
 				<input type="checkbox" id="navButtonHidden">
 				<label id="navButton" for="navButtonHidden"></label>
@@ -78,7 +78,7 @@
 					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
 				</div>
 				<ul class="mainMenu menu">
-					<li><a href="activity.html">觀星活動</a></li>
+					<li><a href="activity.html"  class="onThisPage">觀星活動</a></li>
 					<li><a href="forum.html">星際論壇</a></li>
 					<li><a href="photo.html">照片牆</a></li>
 					<li><a href="article.html">星知識</a></li>
