--- a/src/article.html
+++ b/src/article.html
@@ -70,7 +70,7 @@
 		  /*.6 .9 .9*/
 		 
 		}
-		nav{
+	/*	nav{
 			height: 80px;
 		    width: 100%;
 		    background: linear-gradient(to right, #0c3458 0%, rgba(29, 34, 60,.8) 40%, rgba(21, 22, 31, 0.7) 80%);
@@ -89,11 +89,11 @@
 		    color: rgba(243, 247, 247, 0.6);
 		    font-size: 20px;
 		    /*padding: 0px 20px 7px;*/
-		    letter-spacing: 1px;
+		    /*letter-spacing: 1px;
 		    position: relative;
 		    font-weight: 800;
 
-		}
+		}*/
 
 		/*.mainMenu.menu a:hover{
 			border: 0px;
@@ -158,7 +158,7 @@
 <body id="kn_wrapper">
 <!-- 導覽列 -->
 <nav id="nav">
-	<div class="container relative">
+	<div class="relative">
 		<div class="row">
 			<input type="checkbox" id="navButtonHidden">
 			<label id="navButton" for="navButtonHidden"></label>
@@ -169,7 +169,7 @@
 				<li><a href="activity.html">觀星活動</a></li>
 				<li><a href="forum.html">星際論壇</a></li>
 				<li><a href="photo.html">照片牆</a></li>
-				<li><a href="article.html">星知識</a></li>
+				<li><a href="article.html" class="onThisPage">星知識</a></li>
 			</ul>
 			<ul class="mainMenu signArea">
 				<li id="signLeft">
@@ -177,7 +177,7 @@
 					<span><a href="#">註冊</a></span>
 				</li>
 				<li id="signRight">
-					<span><a href="#">登入</a></span>
+					<span><a href="member.html">登入</a></span>
 				</li>
 			</ul>
 		</div>
