--- a/src/forum-post.html
+++ b/src/forum-post.html
@@ -69,7 +69,7 @@
 <body id="f_wrapper">
 	<!-- 導覽列 -->
 	<nav id="nav" style="background-color: rgba(0,0,0,0.8);">
-		<div class="container relative">
+		<div class="relative">
 			<div class="row">
 				<input type="checkbox" id="navButtonHidden">
 				<label id="navButton" for="navButtonHidden"></label>
@@ -78,7 +78,7 @@
 				</div>
 				<ul class="mainMenu menu">
 					<li><a href="#">觀星活動</a></li>
-					<li><a href="#">星際論壇</a></li>
+					<li><a href="#" class="onThisPage">星際論壇</a></li>
 					<li><a href="#">照片牆</a></li>
 					<li><a href="#">星知識</a></li>
 				</ul>
