--- a/src/activity.html
+++ b/src/activity.html
@@ -489,7 +489,7 @@ $(function(){
 											<div class="col-xs-12 col-sm-12 col-md-12 a-pReset">
 												<div class="col-xs-12 col-sm-6 col-md-6 ">
 
-													<a href="activity_one.activity.html" data-effect="mfp-3d-unfold">
+													<a href="activity_one.html" data-effect="mfp-3d-unfold">
 													<div class="a-item a-phone-searchContainer">
 														<img src="img/a_007.jpg" alt="" class="rwd-img">
 															<p class="a-text-title">墾丁南十字觀星露營</p>
@@ -501,7 +501,7 @@ $(function(){
 
 											<div class="col-xs-12 col-sm-6 col-md-6 ">
 
-												<a href="activity_one.activity.html"  data-effect="mfp-3d-unfold">
+												<a href="activity_one.html"  data-effect="mfp-3d-unfold">
 													<div class="a-item a-phone-searchContainer">
 														<img src="img/a_006.jpg" alt="" class="rwd-img">
 															<p class="a-text-title">墾丁南十字觀星露營</p>
@@ -515,7 +515,7 @@ $(function(){
 
 											<div class="col-xs-12 col-sm-6 col-md-6 ">
 
-												<a href="activity_one.activity.html"  data-effect="mfp-3d-unfold">
+												<a href="activity_one.html"  data-effect="mfp-3d-unfold">
 													<div class="a-item a-phone-searchContainer">
 														<img src="img/a_001.jpg" alt="" class="rwd-img">
 															<p class="a-text-title">墾丁南十字觀星露營</p>
@@ -527,7 +527,7 @@ $(function(){
 
 										<div class="col-xs-12 col-sm-6 col-md-6 ">
 
-												<a href="activity_one.activity.html"  data-effect="mfp-3d-unfold">
+												<a href="activity_one.html"  data-effect="mfp-3d-unfold">
 													<div class="a-item a-phone-searchContainer">
 														<img src="img/a_002.jpg" alt="" class="rwd-img">
 															<p class="a-text-title">墾丁南十字觀星露營</p>
