--- a/src/forum-post.html
+++ b/src/forum-post.html
@@ -25,6 +25,7 @@
 
 	<!-- this page's js -->
 	<script type="text/javascript" src="js/forum.js"></script>
+	<script type="text/javascript" src="js/nav.js"></script>
 
 	<script type="text/javascript">
 	
@@ -74,13 +75,13 @@
 				<input type="checkbox" id="navButtonHidden">
 				<label id="navButton" for="navButtonHidden"></label>
 				<div id="logo">
-					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
+					<a href="index.html"><img src="img/logo.png" alt="ZeroGravity"></a>
 				</div>
 				<ul class="mainMenu menu">
-					<li><a href="#">觀星活動</a></li>
-					<li><a href="#" class="onThisPage">星際論壇</a></li>
-					<li><a href="#">照片牆</a></li>
-					<li><a href="#">星知識</a></li>
+					<li><a href="activity.html">觀星活動</a></li>
+					<li><a href="forum.html" class="onThisPage">星際論壇</a></li>
+					<li><a href="photo.html">照片牆</a></li>
+					<li><a href="article.html">星知識</a></li>
 				</ul>
 				<ul class="mainMenu signArea">
 					<li id="signLeft">
