--- a/src/activity_one.html
+++ b/src/activity_one.html
@@ -10,6 +10,8 @@
 	<script type="text/javascript" src="libs/jquery/dist/jquery.min.js"></script>
 	<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
+	<script type="text/javascript" src="js/nav.js"></script>
+
 	<style type="text/css">
 		*{
 			/*outline: 1px solid red;*/
@@ -75,7 +77,7 @@
 				<input type="checkbox" id="navButtonHidden">
 				<label id="navButton" for="navButtonHidden"></label>
 				<div id="logo">
-					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
+					<a href="index.html"><img src="img/logo.png" alt="ZeroGravity"></a>
 				</div>
 				<ul class="mainMenu menu">
 					<li><a href="activity.html"  class="onThisPage">觀星活動</a></li>
