--- a/src/article.html
+++ b/src/article.html
@@ -17,6 +17,7 @@
      <script type="text/javascript" src="js/magnific.js"></script>
 	<!-- <script type="text/javascript" src="libs/jquery/dist/jquery.min.js"></script> -->
 	<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+	<script type="text/javascript" src="js/nav.js"></script>
 
 	<style type="text/css">
 		*{
@@ -163,7 +164,7 @@
 			<input type="checkbox" id="navButtonHidden">
 			<label id="navButton" for="navButtonHidden"></label>
 			<div id="logo">
-				<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
+				<a href="index.html"><img src="img/logo.png" alt="ZeroGravity"></a>
 			</div>
 			<ul class="mainMenu menu">
 				<li><a href="activity.html">觀星活動</a></li>
