--- a/src/activity.html
+++ b/src/activity.html
@@ -75,25 +75,7 @@
 		}
 		
 		
-			#a-star{
-				width: 450px;
-				margin:auto;	
-				margin-top: 80px;
-				margin-left: -90px;
-				/*background-color: #fff;		*/
-				stroke-dashoffset: 3000;
-    			stroke-dasharray: 3000;
-				animation: circle 10s linear both;
-				/*z-index: 10;*/
-				height: 40vh;
-			}
-
-			@keyframes circle{
-				100%{
-					stroke-dashoffset:0;
-				}
-				
-			}
+			
 		#tit{
 			opacity: 0;
 			animation: fadeIn 5s both;
@@ -324,7 +306,7 @@ $(function(){
 				<input type="checkbox" id="navButtonHidden">
 				<label id="navButton" for="navButtonHidden"></label>
 				<div id="logo">
-					<a href="#"><img src="img/logo.png" alt="ZeroGravity"></a>
+					<a href="index.html"><img src="img/logo.png" alt="ZeroGravity"></a>
 				</div>
 				<ul class="mainMenu menu">
 					<li><a href="activity.html" class="onThisPage">觀星活動</a></li>
@@ -489,7 +471,7 @@ $(function(){
 											<div class="col-xs-12 col-sm-12 col-md-12 a-pReset">
 												<div class="col-xs-12 col-sm-6 col-md-6 ">
 
-													<a href="activity_one.activity.html" data-effect="mfp-3d-unfold">
+													<a href="activity_one.html" data-effect="mfp-3d-unfold">
 													<div class="a-item a-phone-searchContainer">
 														<img src="img/a_007.jpg" alt="" class="rwd-img">
 															<p class="a-text-title">墾丁南十字觀星露營</p>
@@ -501,7 +483,7 @@ $(function(){
 
 											<div class="col-xs-12 col-sm-6 col-md-6 ">
 
-												<a href="activity_one.activity.html"  data-effect="mfp-3d-unfold">
+												<a href="activity_one.html"  data-effect="mfp-3d-unfold">
 													<div class="a-item a-phone-searchContainer">
 														<img src="img/a_006.jpg" alt="" class="rwd-img">
 															<p class="a-text-title">墾丁南十字觀星露營</p>
@@ -515,7 +497,7 @@ $(function(){
 
 											<div class="col-xs-12 col-sm-6 col-md-6 ">
 
-												<a href="activity_one.activity.html"  data-effect="mfp-3d-unfold">
+												<a href="activity_one.html"  data-effect="mfp-3d-unfold">
 													<div class="a-item a-phone-searchContainer">
 														<img src="img/a_001.jpg" alt="" class="rwd-img">
 															<p class="a-text-title">墾丁南十字觀星露營</p>
@@ -527,7 +509,7 @@ $(function(){
 
 										<div class="col-xs-12 col-sm-6 col-md-6 ">
 
-												<a href="activity_one.activity.html"  data-effect="mfp-3d-unfold">
+												<a href="activity_one.html"  data-effect="mfp-3d-unfold">
 													<div class="a-item a-phone-searchContainer">
 														<img src="img/a_002.jpg" alt="" class="rwd-img">
 															<p class="a-text-title">墾丁南十字觀星露營</p>
